<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="update">Обновить</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Ночная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="media_library_activity">Это страница Медиатеки</string>
    <string name="search_activity">Это страница Поиска</string>
    <string name="empty">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_were_looking">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="not_created_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlists">Новый плейлист</string>
    <string name="liked_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="playlist_name_created">Плейлист %s создан</string>
    <string name="playlist_track_add">Добавлено в плейлист %s</string>
    <string name="playlist_track_add_already">Трек уже добавлен в плейлист %s</string>
    <string name="no_track_in_playlist">В этом плейлисте нет треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="remove_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_apk">Share APK</string>
    <string name="playlist_edit">Плейлист изменен</string>
    <string name="want_remove_playlist">Хотите удалить плейлист %1$s?</string>
    <plurals name="playlist_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="link_agree">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="link_course">https://practicum.yandex.ru/android-developer/</string>

    <string name="email">test123@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>