<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/spacing_md"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switcherTheme"
            style="@style/SwitchSettingsActivity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_settings"
            android:thumb="@drawable/custom_switch_thumb"
            android:text="@string/night_theme" />

        <Button
            android:id="@+id/btn_share"
            style="@style/ButtonSettingsActivity"
            android:text="@string/share_app"
            app:icon="@drawable/share_icon" />

        <Button
            android:id="@+id/btn_support"
            style="@style/ButtonSettingsActivity"
            android:text="@string/write_support"
            app:icon="@drawable/support_icon" />

        <Button
            android:id="@+id/btn_agree"
            style="@style/ButtonSettingsActivity"
            android:text="@string/user_agreement"
            app:icon="@drawable/arrow_forward_icon" />
    </LinearLayout>

</LinearLayout>