<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_xl"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="@dimen/spacing_sm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="28dp"
        android:layout_marginHorizontal="@dimen/spacing_sm">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_xl"
            android:layout_marginBottom="@dimen/spacing_sm"
            app:cornerRadius="@dimen/radius_lg"
            app:icon="@drawable/search_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/spacing_xs"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_xl"
            android:layout_marginBottom="@dimen/spacing_sm"
            app:cornerRadius="@dimen/radius_lg"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/spacing_xs"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_xl"
            app:cornerRadius="@dimen/radius_lg"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/spacing_xs"
            app:iconTint="@color/black" />
    </LinearLayout>
</LinearLayout>