<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_background"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorderPlayer"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorderPlayer"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorderTextPlayer"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_sm"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorderTextPlayer"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_sm"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIconTint="?attr/colorPrimary"
            app:navigationIcon="@drawable/arrow_left_icon" />

        <ImageView
            android:id="@+id/trackImg"
            android:layout_width="0dp"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="@id/leftBorderPlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer" />

        <TextView
            android:id="@+id/trackNamePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/trackImg"
            app:layout_constraintStart_toStartOf="@id/leftBorderPlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer"
            tools:text="Looong track name Looong track name Looong track name Looong track name"
            style="@style/TrackNamePlayer" />

        <TextView
            android:id="@+id/artistNamePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/trackNamePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderPlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer"
            tools:text="Nirvana N ir van aNirvana NirvanaNirvana Nirvana Nirvana Nirvana Nirvana Nirvana"
            style="@style/TrackArtistPlayer" />

        <ImageView
            android:id="@+id/playerControl"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/button_play"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            app:tint="?attr/colorPrimary"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toBottomOf="@id/artistNamePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderPlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/button_1"
            android:layout_marginTop="54dp"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@id/artistNamePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderPlayer" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/button_2"
            android:layout_marginTop="54dp"
            android:contentDescription="@null"
            app:layout_constraintTop_toBottomOf="@id/artistNamePlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer" />

        <TextView
            android:id="@+id/timePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/playerControl"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintEnd_toEndOf="@id/rightBorderPlayer"
            tools:text="0:30"
            style="@style/TimeTrackPlayer" />

        <TextView
            android:id="@+id/durationTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/duration"
            app:layout_constraintTop_toBottomOf="@id/timePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintTag="durationTitlePlayer"
            style="@style/DescriptionTrackPlayer" />

        <TextView
            android:id="@+id/albumTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/album"
            app:layout_constraintTop_toBottomOf="@id/durationTitlePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintTag="albumTitlePlayer"
            style="@style/DescriptionTrackPlayer" />

        <TextView
            android:id="@+id/yearTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@id/albumTitlePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintTag="yearTitlePlayer"
            style="@style/DescriptionTrackPlayer" />

        <TextView
            android:id="@+id/genreTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/yearTitlePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintTag="genreTitlePlayer"
            style="@style/DescriptionTrackPlayer" />

        <TextView
            android:id="@+id/countryTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/genreTitlePlayer"
            app:layout_constraintStart_toStartOf="@id/leftBorderTextPlayer"
            app:layout_constraintTag="countryTitlePlayer"
            style="@style/DescriptionTrackPlayer" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="durationTitlePlayer, albumTitlePlayer, yearTitlePlayer, genreTitlePlayer, countryTitlePlayer"
            app:barrierDirection="end" />

        <TextView
            android:id="@+id/durationValuePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/durationTitlePlayer"
            app:layout_constraintStart_toEndOf="@+id/textsBarrier"
            app:layout_constraintEnd_toEndOf="@id/rightBorderTextPlayer"
            tools:text="5:35"
            style="@style/ValueTrackPlayer" />

        <TextView
            android:id="@+id/albumValuePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/albumTitlePlayer"
            app:layout_constraintStart_toEndOf="@+id/textsBarrier"
            app:layout_constraintEnd_toEndOf="@id/rightBorderTextPlayer"
            tools:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009)"
            style="@style/ValueTrackPlayer" />

        <TextView
            android:id="@+id/yearValuePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/yearTitlePlayer"
            app:layout_constraintStart_toEndOf="@+id/textsBarrier"
            app:layout_constraintEnd_toEndOf="@id/rightBorderTextPlayer"
            tools:text="1965"
            style="@style/ValueTrackPlayer" />

        <TextView
            android:id="@+id/genreValuePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/genreTitlePlayer"
            app:layout_constraintStart_toEndOf="@+id/textsBarrier"
            app:layout_constraintEnd_toEndOf="@id/rightBorderTextPlayer"
            tools:text="Rock"
            style="@style/ValueTrackPlayer" />

        <TextView
            android:id="@+id/countryValuePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/countryTitlePlayer"
            app:layout_constraintStart_toEndOf="@+id/textsBarrier"
            app:layout_constraintEnd_toEndOf="@id/rightBorderTextPlayer"
            tools:text="Великобритания"
            style="@style/ValueTrackPlayer" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>